--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -6,6 +6,7 @@
     &__inner {
         position: relative;
         padding: 25px 20px 0;
+        border-bottom: 1px solid whitesmoke;
     }
 }
 
@@ -13,6 +14,7 @@
     .sidebar {
         lost-column: 5/12;
         &__inner {
+            border-bottom: none;
             padding: 30px 20px 0;
             &:after {
                 background: $color-gray-border;
